--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 __pycache__/
 .ipynb_checkpoints/
+PyTorchPractice/data
 ProductClassificationFastText/data/*
 !ProductClassificationFastText/data/.gitkeep
 ProductClassificationFastText/models/*
