play-tested bert and trained a model based on data from a seperate project

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 __pycache__/
 .ipynb_checkpoints/
 PyTorchPractice/data
+PyTorchPractice/bert_model.pt
 ProductClassificationFastText/data/*
 !ProductClassificationFastText/data/.gitkeep
 ProductClassificationFastText/models/*
